syntax = "proto3";
option go_package = ".;proto";
import "google/protobuf/empty.proto";

service EmailService {
  rpc GetDisposableList(google.protobuf.Empty) returns (GetDisposableListResponse) {}
  rpc GetGenericList(google.protobuf.Empty) returns (GetGenericListResponse) {}
  rpc GetFreeEmailList(google.protobuf.Empty) returns (GetFreeEmailListResponse) {}
}

message GetDisposableListResponse {
  repeated string emails = 1;
}
message GetGenericListResponse {
  repeated string generic_list = 1;
}

message GetFreeEmailListResponse {
  repeated string emails = 1;
}